# omit

./: omit.cabal  stack.yaml
exe/: Main.hs
src/Application/: Git.hs
src/Application/Git/: Errors.hs  RepoDirectory.hs
src/Data/Char/: Ext.hs
src/Data/Git/: BlobType.hs  CommitObject.hs  SHAHash.hs
src/Data/List/NonEmpty/: Ext.hs
tests/: Main.hs
tests/Data/Git/CommitObject/: Tests.hs
