name:
  omit
version:             0.0.1
synopsis:
  A simple git-compatible DVCS
-- description:
license:
  MIT
license-file:
  LICENSE
author:
  Dmytro Sirenko
maintainer:
  serg.foo@gmail.com
category:
  Development
build-type:
  Simple
cabal-version:
  >=1.10

executable omit
  main-is:
    Main.hs
  -- other-modules:
  build-depends:
    Diff,
    Glob,
    SHA,
    ansi-terminal,
    base >=4.6,
    binary,
    bytestring,
    containers,
    directory,
    filepath,
    old-time,
    process,
    time,
    unix,
    utf8-string,
    zlib
  hs-source-dirs:
    exe
  default-language:
    Haskell2010
