name:
  omit
version:             0.0.1
synopsis:
  A simple git-compatible DVCS
-- description:
license:
  MIT
license-file:
  LICENSE
author:
  Dmytro Sirenko
maintainer:
  serg.foo@gmail.com
category:
  Development
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    Application.Git
  hs-source-dirs:
    src
  build-depends:
    Diff,
    Glob,
    SHA,
    ansi-terminal,
    base >=4.6,
    binary,
    bytestring,
    containers,
    directory,
    filepath,
    old-time,
    process,
    time,
    unix,
    utf8-string,
    zlib
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults

-- -fno-warn-name-shadowing

executable omit
  main-is:
    Main.hs
  build-depends:
    base,
    omit
  hs-source-dirs:
    exe
  default-language:
    Haskell2010
