name:
  omit
version:             0.0.1
synopsis:
  A simple git-compatible DVCS
-- description:
license:
  MIT
license-file:
  LICENSE
author:
  Dmytro Sirenko
maintainer:
  serg.foo@gmail.com
category:
  Development
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    Application.Git
    Application.Git.Errors
    Application.Git.RepoDirectory
    Data.Char.Ext
    Data.Git.BlobType
    Data.Git.CommitObject
    Data.Git.SHAHash
    Data.List.NonEmpty.Ext
  hs-source-dirs:
    src
  build-depends:
    Diff,
    Glob,
    SHA,
    ansi-terminal,
    attoparsec,
    base >=4.6,
    binary,
    bytestring,
    containers,
    directory,
    extra,
    filepath,
    mtl,
    old-time,
    optparse-applicative,
    process,
    semigroups,
    time,
    unix,
    utf8-string,
    zlib
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fwarn-name-shadowing
    -fno-warn-type-defaults

executable omit
  main-is:
    Main.hs
  build-depends:
    base,
    omit
  hs-source-dirs:
    exe
  default-language:
    Haskell2010

test-suite omit-test-suite
  type:
    exitcode-stdio-1.0
  main-is:
    tests/Main.hs
  other-modules:
    Data.Git.CommitObject.Tests
  build-depends:
    QuickCheck,
    base,
    bytestring,
    HUnit,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    omit
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
  hs-source-dirs:
    tests
